<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleRegister"
        android:textSize="30dp"
        android:gravity="center"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        android:textColorHint="@android:color/white">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:id="@+id/password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeatPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:id="@+id/repeatPassword"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/groupGender"
        android:gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/male"
            android:id="@+id/radioMale"
            android:checked="true">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/female"
            android:id="@+id/radioFemale">
        </RadioButton>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letsRegister"
        android:id="@+id/registerButtonOne"
        android:backgroundTint="#800000"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyRegister"
        android:textAllCaps="false"
        android:id="@+id/backLoginActivity"
        android:textSize="13dp"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>