<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:tools=
        "http://schemas.android.com/tools"
    xmlns:app=
        "http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="234dp"
        android:src="@drawable/samurai"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#434646"
        android:id="@+id/loginEmail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="#434646"
        android:gravity="center"
        android:id="@+id/loginPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:id="@+id/loginButton"
        android:backgroundTint="#800000"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:id="@+id/registerButton"
        android:textSize="13dp"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>



